# slint

./: Cargo.toml  Makefile.toml  build.rs
.cargo/: config.toml
android/: Cargo.toml  Makefile.toml  build.gradle  build.rs
android/src/: lib.rs
backup/: Cargo.toml
backup/.cargo/: config.toml
backup/src/: main.rs
backup/ui/: main.slint  view.slint
backup/web/: index.html
ios/: Cargo.toml  Makefile.toml  build.rs  build_for_ios_with_cargo.bash  project.yml
pc/: Cargo.toml  Makefile.toml  MyApp.icns
pc/src/: main.rs
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
shared/ui/: font.slint  main.slint
src/: main.rs
ui/: main.slint  view.slint
web/: Cargo.toml  Makefile.toml  a_build.rs  build.rs  index.html
web/src/: lib.rs
