[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[build-dependencies]
slint-build = "1.11.0"

[profile.dev]
debug = true 