[package]
name = "pc"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
shared = { path = "../shared" }
slint = "1.12"

[build-dependencies]
cargo-make = "0.37"


[package.metadata.bundle]
name = "MyApp"
identifier = "com.apathyjade.app"
icon = ["./assets/icon.png"]
resources = ["./assets/"] 
description = "xxx"
version = "1.0.0"
# copyright = ""
