[package]
name = "web"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared" }
slint = "1.12"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
miniserve = "0.31"

[build-dependencies]
cargo-make = "0.37"
